# dotbot-sudo

./: .pdm-python  pyproject.toml  sudo.py
